--- a/index.html
+++ b/index.html
@@ -1,97 +1,48 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <html>
 <head>
-<meta charset "UTF-8">
-<meta name="viewport" content="width="device-width", initial scale="1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial scale=1.0">
 <title>Omary transaction services ltd</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
 body {
-margin:0;
+  margin: 0;
+  background-image: url('project/picture.jpg'); /* Change path if needed */
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  font-size: 16px;
+  color: green;
+  font-family: Arial, sans-serif;
 }
-.top-right-text {
-  position: absolute;
-  top: 0;
+.top {
+  background-color: green;
+  height: 30vh;
+}
+.middle {
+  background-color: white;
+  height: 50vh;
+}
+.bottom {
+  background-color: #1ba5d1; /* blue shade */
+  height: 20vh;
+  color: white;
+  text-align: center;
+  padding-top: 20px;
+}
+.footer {
+  position: fixed;
+  left: 0;
   right: 0;
-}
-.About us{
-position: top-right;
-}
-.top{
-background-color:green;
-height:30vh;
-}
-.middle{
-background-color:white;
-height: 50vh;
-}
-.bottom{
-background-color:#1ba5d; /*blue shade*/
-height:20vh;
-color:white;
-text-align:center;
-padding-top:20px;
-}
-font-size:16px;
-color:green;
-font-style:arial, sans-serif;
-color:green;
-padding;0 0 80px 0;
-font-size:16px;
-margin:0;
-padding:0;
-height:100%;
-}
-/*Top header bar*/
-.top-bar{
-background: white:
-display: flex;
-justify-content: space-between:
-align-items:center;
-padding:10px 20px;
-border-bottom: 1px solid #ccc;
-}
-.top-bar img{
-height: 40px;
-}
-.top-bar .icons i{
-margin-left:15px;
-font-size:18px;
-color:#000;
-cursor:pointer;
-}
-html{
-height:100%;
-}
-.curve{
-height:100vh;
-background: linear-gradient(to bottom, black, white 50%);
-position: relative;
-overflow:hidden;
-}
-.h2{
-background-color: green;
-padding:30px
-}
-.footer{
-position: fixed;
-left:0;
-right:0;
-bottom:0;
-background:#333;
-color:white;
-text-align: center;
-padding:15px;
-}
-.footer{
-color:white;
-text-decoration: none
-margin: 0 10px;
-font-size:20px
-}
-.footer a:hover{
-color:#00ffcc;
+  bottom: 0;
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  font-size: 20px;
 }
 </style>
 </head>
@@ -108,7 +59,7 @@ color:#00ffcc;
 <span>home</span>&gt; <span>About us</span>
 </div>
 <div class="icons">
-<<a href="tel:+255699341448" title="call us">
+<a href="tel:+255699341448" title="call us">
 <i class="fas fa-phone"></i>
 </a>
 </div>
@@ -117,10 +68,9 @@ color:#00ffcc;
 <a href="https://wa.me/255674612578" target="_bank">
 <i cass="fab fa-whatsapp"></i>
 </a>
-<a href="https://instagram.com/_wakupoahh" target="_blank>
-<i cass="fab fa-instagram"></i>
+<a href="https://instagram.com/_wakupoahh" target="_blank">
+<i class="fab fa-instagram"></i>
 </a>
 </footer>
 </body>
 </html>
-
